--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,5 @@ include tr/*.txt
 recursive-include tr *.bin*
 recursive-include tr *.so.*
 recursive-include tr *.so
-recursive-include tr *.dll.*
+recursive-include tr *..*
 recursive-include tr *.dll
